<resources>
    <string name="app_name">ToDo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">todo</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="signup">SignUp</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="signin">SignIn</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="type_your_task">Type your task .......</string>
    <string name="login">Login</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="alert">Alert!</string>
    <string name="forgot_npassword">Forgot \nPassword?</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="don_t_worry_it_happens_please_enter_the_address_associated_with_your_account">Don\'t worry it happens. Please enter the address associated with your account.</string>
    <string name="add_new_task">Add new task</string>
    <string name="add_task">Add task</string>
    <string name="no_tasks">Task-free zone alert! \n Add some and let the productivity flow</string>
    <string name="save">Save</string>
    <string name="enter_task_here">Enter task here</string>
    <string name="close_add_task_dialog_box">Close Add Task Dialog Box</string>
    <string name="logout_">Logout</string>
    <string name="homepage_image">Homepage Image</string>
</resources>