<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    tools:context=".fragments.AddTodoFragment">

    <ImageView
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/baseline_close_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/light_grey"
        android:contentDescription="@string/close_add_task_dialog_box"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/AddTodoLayoutStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/SaveButton"
        app:layout_constraintEnd_toStartOf="@+id/closeButton"
        app:layout_constraintStart_toStartOf="@+id/SaveButton"
        app:layout_constraintTop_toTopOf="@+id/closeButton">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTask"
            style="@style/AddTodoEditTextStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_task_here" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/SaveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:fontFamily="@font/poppins_medium"
        android:padding="8dp"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>