<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    app:strokeWidth="4dp"
    tools:context=".fragments.LogOutPopupFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:src="@drawable/alert_image"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            android:fontFamily="@font/poppins_semibold"
            android:text="@string/alert"
            android:textColor="@color/dark_blue"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/are_you_sure_you_want_to_logout"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/CancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toStartOf="@+id/LogoutButton"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/LogoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@drawable/border_rect"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/logout"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="@+id/CancelButton"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/CancelButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>