<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.SignUpFragment">


    <TextView
        android:id="@+id/SignUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_up"
        android:textColor="@color/dark_blue"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayoutCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="@color/white"
        android:paddingHorizontal="10dp"
        android:paddingTop="32dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUpTextView">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/UsernameInputLayout"
            style="@style/InputLayoutStyle"
            app:layout_constraintBottom_toTopOf="@+id/PasswordInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/baseline_alternate_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/EditTextStyle"
                android:hint="@string/enter_email_id"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PasswordInputLayout"
            style="@style/InputLayoutStyle"
            app:layout_constraintBottom_toTopOf="@+id/RePassInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UsernameInputLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/grey"
            app:startIconDrawable="@drawable/baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/EditTextStyle"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/RePassInputLayout"
            style="@style/InputLayoutStyle"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/SignUpButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PasswordInputLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/grey"
            app:startIconDrawable="@drawable/baseline_lock_reset_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRePassword"
                style="@style/EditTextStyle"
                android:hint="@string/re_enter_password"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/SignUpButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/SignInIntentText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBarSignUp"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:indeterminateTint="@color/blue"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/SignInIntentText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/InfoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:fontFamily="@font/poppins"
            android:text="@string/already_have_an_account"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/SignInIntentText"
            app:layout_constraintEnd_toStartOf="@+id/SignInIntentText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/SignInIntentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/poppins"
            android:text="@string/login"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/InfoTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:src="@drawable/sign_up_image"
        app:layout_constraintBottom_toTopOf="@+id/SignUpTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>