<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.HomeFragment">


    <ImageView
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/light_grey"
        android:contentDescription="@string/logout_"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:src="@drawable/task_done_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton"
        android:contentDescription="@string/homepage_image"/>


    <TextView
        android:id="@+id/tvNoTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/no_tasks"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/addHomeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:shimmer_direction="left_to_right"
        app:shimmer_duration="1000"
        app:shimmer_tilt="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/list_item_shimmer" />

            <include layout="@layout/list_item_shimmer" />

            <include layout="@layout/list_item_shimmer" />

            <include layout="@layout/list_item_shimmer" />

            <include layout="@layout/list_item_shimmer" />

            <include layout="@layout/list_item_shimmer" />

        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:fadeScrollbars="true"
        android:isScrollContainer="true"
        android:layoutAnimation="@anim/layout_animation"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:scrollbarDefaultDelayBeforeFade="500"
        android:scrollbarFadeDuration="800"
        android:scrollbarSize="8dp"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbarThumbVertical="@drawable/scroll_thumb"
        android:scrollbarTrackVertical="@drawable/scroll_track"
        android:scrollbars="vertical"
        android:verticalScrollbarPosition="right"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3">

    </androidx.recyclerview.widget.RecyclerView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        android:foregroundTint="@color/white"
        android:src="@drawable/add_image"
        app:tint="@color/white"
        app:backgroundTint="@color/blue"
        app:elevation="4dp"
        android:contentDescription="@string/add_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>