<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.SignInFragment">


    <TextView
        android:id="@+id/SignInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login"
        android:textColor="@color/dark_blue"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:src="@drawable/sign_in_image"
        app:layout_constraintBottom_toTopOf="@+id/SignInText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayoutCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="@color/white"
        android:paddingHorizontal="10dp"
        android:paddingTop="32dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignInText">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/UsernameInputLayout"
            style="@style/InputLayoutStyle"
            app:layout_constraintBottom_toTopOf="@+id/PasswordInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/baseline_alternate_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/EditTextStyle"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PasswordInputLayout"
            style="@style/InputLayoutStyle"
            app:layout_constraintBottom_toTopOf="@+id/ForgotPasswordText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/UsernameInputLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/grey"
            app:startIconDrawable="@drawable/baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/EditTextStyle"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/LoginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/SignUpIntentText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBarSignIn"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:indeterminateTint="@color/blue"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/SignUpIntentText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/ForgotPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins"
            android:text="Forgot Password?"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/LoginButton"
            app:layout_constraintEnd_toEndOf="@+id/PasswordInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/PasswordInputLayout" />

        <TextView
            android:id="@+id/SignUpIntentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/poppins"
            android:text="@string/sign_up"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/InfoTextView" />

        <TextView
            android:id="@+id/InfoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/SignUpIntentText"
            app:layout_constraintEnd_toStartOf="@+id/SignUpIntentText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>