<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.ResetPasswordFragment">


    <TextView
        android:id="@+id/ForgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/forgot_npassword"
        android:textColor="@color/dark_blue"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <ImageView
        android:id="@+id/ForgotPasswordImage"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:src="@drawable/forgot_password_image"
        app:layout_constraintBottom_toTopOf="@id/ForgotPasswordTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BackButton" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayoutCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rectangle"
        android:backgroundTint="@color/white"
        android:paddingHorizontal="10dp"
        android:paddingTop="32dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InfoText">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EmailInputLayout"
            style="@style/InputLayoutStyle"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/SubmitButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/baseline_alternate_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/EditTextStyle"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/SubmitButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rounded_rectangle"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/poppins_medium"
            android:text="Submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EmailInputLayout" />

        <ProgressBar
            android:id="@+id/progressBarForgotPassword"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:indeterminateTint="@color/blue"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EmailInputLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/InfoText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/poppins"
        android:text="@string/don_t_worry_it_happens_please_enter_the_address_associated_with_your_account"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ForgotPasswordTextView" />

    <ImageView
        android:id="@+id/BackButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/grey" />

</androidx.constraintlayout.widget.ConstraintLayout>